# db-storage-buffer-manager

./: .gitignore  CMakeLists.txt  Clock.txt  LRU-2.txt  LRU-3.txt  LRU-4.txt  LRUBMgr.txt  README.md  all.sh  build.sh  dependency.sh  eval.txt  main.cc  naiveBMgr.txt  test.sh
doc/: TypstTemplates  report.typ
eval/: 对比结果.xlsx
eval/Clock/: 1024.txt  12288.txt  16384.txt  4096.txt  8192.txt
eval/LRU-2/: 1024.txt  12288.txt  16384.txt  4096.txt  8192.txt
eval/LRU-3/: 1024.txt  12288.txt  16384.txt  4096.txt  8192.txt
eval/LRU-4/: 1024.txt  12288.txt  16384.txt  4096.txt  8192.txt
eval/LRUBMgr/: 1024.txt  12288.txt  16384.txt  4096.txt  8192.txt
eval/naiveBMgr/: 1024.txt  12288.txt  16384.txt  4096.txt  8192.txt
include/: BMgr.h  ClockBMgr.h  DSMgr.h  Evaluator.h  LRUBMgr.h  Mgr.h
include/defer/: defer.hpp
src/: BMgr.cc  CMakeLists.txt  ClockBMgr.cc  DSMgr.cc  LRUBMgr.cc  Mgr.cc
test/: info.py  mini.txt
unittest/: CMakeLists.txt  SameHashReplaceTest.cc  logtest.cc
